--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@types/node": "^17.0.9",
     "@types/react": "^17.0.38",
+    "@withshepherd/faker": "^5.5.5",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
     "miragejs": "^0.1.43",
