--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.6.0",
     "@hookform/resolvers": "^2.8.8",
     "apexcharts": "^3.33.0",
+    "axios": "^0.26.0",
     "framer-motion": "^5.6.0",
     "next": "12.0.8",
     "react": "17.0.2",
